feat: history, photos, review average fe

--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -1,6 +1,11 @@
-html, body, #root {
+html, body {
     height: 100%;
     overflow: hidden;
+}
+
+#root {
+    height: 100%;
+    overflow: auto;
 }
 
 body {
