--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -1,18 +1,19 @@
-html, body {
-    height: 100%;
-    overflow: hidden;
+html,
+body {
+  height: 100%;
+  overflow: hidden;
 }
 
 #root {
-    height: 100%;
-    overflow: auto;
+  height: 100%;
+  overflow: auto;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Arial;
-    font-size: 16px;
-    line-height: 1.3;
-    color: #2E2E2E;
+  padding: 0;
+  margin: 0;
+  font-family: Arial;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #2e2e2e;
 }
